--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,233 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  margin: 0 20vw;
+  background-color: #7f5a83;
+  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
+  font-family: monospace;
+  font-weight: 600;
+  color: white;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #fff;
+  margin: 2rem 0 4rem 0;
+  min-height: 100vh;
+  background-color: #b1bfd8;
+  background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2.5rem 5rem 0 rgba(0, 0, 0, 0.1);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.visually-hidden {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  white-space: nowrap;
 }
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2.5rem 5rem 0 rgba(0, 0, 0, 0.1);
+  width: 100%;
+  margin-bottom: 5vh;
+  background-color: #b1bfd8;
+  background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
+}
+.btn{
+    padding: 0.8rem 1rem 0.7rem;
+    border: 0.2rem solid #4d4d4d;
+    cursor: pointer;
+    text-transform: capitalize;
+    border-radius: 9vw;
+  
+}
+.btn-lg{
+ width: 69%;
+ background-color: black;
+ color: white;
+ border: none;
+ 
+ margin-bottom: 1vh;
+}
+.label_lg{
+  width: 65%;
+  border-radius: 9vh;
+  height: 3vh;
+  padding: 0.8rem 1rem 0.7rem;
+  outline: none;
+  cursor: pointer;
+  text-transform: capitalize;
+  border: none;
+  border-radius: 9vw;
+  border: 2px solid black;
+  background: transparent;
+  font-weight: 600;
+  color: white;
+  margin-bottom: 3vh;
+}
+
+
+.btn-group{
+  display: flex;
+  justify-content: space-around;
+  width: 70%;
+  
+  
+}
+.toggle-btn{
+  width: 150px;
+  background-color: black;
+  color: white;
+  border: none; 
+}
+.task-group{
+  list-style-type: none;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.btn-edit{
+  width: 150px;
+  margin-right: 2vw;
+  background-color: black;
+  color: white;
+  border: none;
+}
+.btn-del{
+  width: 150px;
+  margin-right: 2vw;
+  background-color:red;
+  color: white;
+  border: none
+}
+
+.todo-view{
+  margin-bottom: 1vh;
+}
+
+.todo-cancel{
+  width: 150px;
+  margin-right: 2vw;
+  background-color: black;
+  color: white;
+  border: none;
+}
+.todo-save{
+  width: 150px;
+  margin-right: 2vw;
+  background-color: black;
+  color: white;
+  border: none;
+}
+.todo-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2.5rem 5rem 0 rgba(0, 0, 0, 0.1);
+  background-color: #b1bfd8;
+  background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
+
+}
+.todo-text {
+  width: 80%;
+  min-height: 1vh;
+  padding: 0.4rem 0.8rem;
+  border: 2px solid black;
+  border-radius: 9vw ;
+  outline: none;
+  background: transparent;
+}
+.todo-label{
+  color: black;
+  font-size: medium;
+}
+
+.c-cb {
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.25;
+  display: block;
+  position: relative;
+  min-height: 44px;
+  padding-left: 40px;
+  clear: left;
+  margin-bottom: 1vh;
+}
+.c-cb > label::before,
+.c-cb > input[type="checkbox"] {
+  box-sizing: border-box;
+  top: -2px;
+  left: -2px;
+  width: 44px;
+  height: 44px;
+}
+.c-cb > input[type="checkbox"] {
+  cursor: pointer;
+  position: absolute;
+  z-index: 1;
+  margin: 0;
+  opacity: 0;
+}
+.c-cb > label {
+  font-size: inherit;
+  font-family: inherit;
+  line-height: inherit;
+  display: inline-block;
+  margin-bottom: 0;
+  padding: 8px 15px 5px;
+  cursor: pointer;
+}
+.c-cb > label::before {
+  content: "";
+  position: absolute;
+  border: 2px solid black;
+  background: transparent;
+}
+.c-cb > input[type="checkbox"]:focus + label::before {
+  border-width: 4px;
+  outline: 3px solid black;
+}
+.c-cb > label::after {
+  box-sizing: content-box;
+  content: "";
+  position: absolute;
+  top: 11px;
+  left: 9px;
+  width: 18px;
+  height: 7px;
+  transform: rotate(-45deg);
+  border: solid black;
+  border-width: 0 0 5px 5px;
+  opacity: 0;
+  background: transparent;
+}
+.c-cb > input[type="checkbox"]:checked + label::after {
+  opacity: 1;
+}
+@media  screen and (max-width:560px) {
+  body{
+    margin:0;
+  }
+  .todo-list{
+    font-size: small;
+    width: 90%;
+  }
+  .todo-label{
+    font-size: small;
+  }
+}
+
+.btn:hover{
+  background-color: rgb(57, 7, 104);
+}
+
+
+
