--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ form{
   margin-bottom: 5vh;
   background-color: #b1bfd8;
   background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
+  border-radius: 15px;
 }
 .btn{
     padding: 0.8rem 1rem 0.7rem;
