--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body{
   background-color: #b1bfd8;
   background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2.5rem 5rem 0 rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
 }
 
 .visually-hidden {
